--- a/MyCalculator/Resourses/Styles.xaml
+++ b/MyCalculator/Resourses/Styles.xaml
@@ -2,11 +2,58 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="MainTextColor" Color="red"/>
-
+    <SolidColorBrush x:Key="MainBackgroundColor" Color="LightGray"/>
+    
+    <!-- Стиль строки вывода выражения -->
     <Style TargetType="TextBlock" x:Key="MainTextStyle">
-        <Setter Property="Foreground" Value="{ThemeResource MainTextColor}"/>
-        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontSize" Value="50"/>
+    </Style>
+    
+    <!-- Стиль строки предыдущего состояния -->
+    <Style TargetType="TextBlock" x:Key="BackTextStyle">
+        <Setter Property="Foreground" Value="Gray"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="15"/>
+    </Style>
+
+    <!-- Базовый стиль кнопок -->
+    <Style TargetType="Button" x:Key="ButtonsStyle">
+        <Setter Property="Margin" Value="1"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+    </Style>
+
+    <!-- Стиль кнопок с цифрами -->
+    <Style TargetType="Button" x:Key="NumberButtonsStyle" BasedOn="{StaticResource ButtonsStyle}">
+        <Setter Property="Background" Value="White"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+    </Style>
+
+    <!-- Стиль сторонних кнопок кнопок -->
+    <Style TargetType="Button" x:Key="OtherButtonsStyle" BasedOn="{StaticResource ButtonsStyle}">
+        <Setter Property="Background" Value="#E5E4E2"/>
+        <Setter Property="FontSize" Value="15"/>
+    </Style>
+
+    <!-- Стиль вспомогательных кнопок -->
+    <Style TargetType="Button" x:Key="AuxiliaryButtonsStyle" BasedOn="{StaticResource ButtonsStyle}">
+        <Setter Property="Background" Value="{StaticResource MainBackgroundColor}"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+    </Style>
+
+    <!-- Стиль названия калькулятора -->
+    <Style TargetType="TextBlock" x:Key="CalculatorNameStyle">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5"/>
     </Style>
 
 </ResourceDictionary>
