--- a/MyCalculator/MainPage.xaml
+++ b/MyCalculator/MainPage.xaml
@@ -15,7 +15,6 @@
             <RowDefinition Height="40px"/>
             <RowDefinition Height="0.4*"/>
             <RowDefinition Height="1.6*"/>
-            <RowDefinition Height="0.6*"/>
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
@@ -32,70 +31,53 @@
         </Grid.ColumnDefinitions>
         
         <!--  Верхнее меню  -->
-        <StackPanel Grid.Row="0" Grid.ColumnSpan="4" Orientation="Horizontal">
-            <Button Content="---" Background="{StaticResource MainBackgroundColor}" HorizontalAlignment="Left"/>
-            <TextBlock Style="{StaticResource CalculatorNameStyle}" Text="Обычный"/>
-            <Button Content="Roll" Background="{StaticResource MainBackgroundColor}" HorizontalAlignment="Right"/>
-        </StackPanel>
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="4" Style="{StaticResource CalculatorNameStyle}" Text="Обычный"/>
 
         <!--  Строка предыдущего состояния  -->
-        <Viewbox  Grid.Row="1" Grid.ColumnSpan="4" Style="{StaticResource MainTextboxStyle}">
+        <Viewbox  Grid.Row="1" Grid.ColumnSpan="4" Style="{StaticResource TextboxStyle}">
             <TextBlock Style="{StaticResource BackTextStyle}" Text="{Binding BackString}"/>
         </Viewbox>
 
         <!--  Строка вывода выражения  -->
-        <Viewbox  Grid.Row="2" Grid.ColumnSpan="4" Style="{StaticResource MainTextboxStyle}">
+        <Viewbox  Grid.Row="2" Grid.ColumnSpan="4" Style="{StaticResource TextboxStyle}">
             <TextBlock Style="{StaticResource MainTextStyle}" Text="{Binding MainString, Mode=OneWay}"/>
         </Viewbox>
         
-        
-        <!-- Вспомогательные кнопки  -->
-        <StackPanel Grid.Row="3" Grid.ColumnSpan="4" Orientation="Horizontal">
-            <Button Content="MC" Style="{StaticResource AuxiliaryButtonsStyle}"/>
-            <Button Content="MR" Style="{StaticResource AuxiliaryButtonsStyle}"/>
-            <Button Content="M+" Style="{StaticResource AuxiliaryButtonsStyle}"/>
-            <Button Content="M-" Style="{StaticResource AuxiliaryButtonsStyle}"/>
-            <Button Content="MS" Style="{StaticResource AuxiliaryButtonsStyle}"/>
-            <Button Content="M*" Style="{StaticResource AuxiliaryButtonsStyle}"/>
-        </StackPanel>
-        
         <!-- Кнопки калькулятора -->
         <!-- 1 строка -->
-        <Button Content="%" Grid.Column="0" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}"/>
-        <Button Content="CE" Grid.Column="1" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding ClearStringCommand}"/>
-        <Button Content="C" Grid.Column="2" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding ClearAllCommand}"/>
-        <Button Content="&lt;=" Grid.Column="3" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding DeleteLastCommand}"/>
+        <Button Content="%" Grid.Column="0" Grid.Row="3" Style="{StaticResource OtherButtonsStyle}" Command="{Binding PercentCommand}"/>
+        <Button Content="CE" Grid.Column="1" Grid.Row="3" Style="{StaticResource OtherButtonsStyle}" Command="{Binding ClearStringCommand}"/>
+        <Button Content="C" Grid.Column="2" Grid.Row="3" Style="{StaticResource OtherButtonsStyle}" Command="{Binding ClearAllCommand}"/>
+        <Button Content="&lt;=" Grid.Column="3" Grid.Row="3" Style="{StaticResource OtherButtonsStyle}" Command="{Binding DeleteLastCommand}"/>
 
         <!-- 2 строка -->
-        <Button Content="1/x" Grid.Column="0" Grid.Row="5" Style="{StaticResource OtherButtonsStyle}"/>
-        <Button Content="x&#x00B2;" Grid.Column="1" Grid.Row="5" Style="{StaticResource OtherButtonsStyle}"/>
-        <Button Content="√x" Grid.Column="2" Grid.Row="5" Style="{StaticResource OtherButtonsStyle}"/>
-        <Button Content="/" Grid.Column="3" Grid.Row="5" Style="{StaticResource OtherButtonsStyle}" Command="{Binding DivCommand}"/>
+        <Button Content="1/x" Grid.Column="0" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding HyperboleCommand}"/>
+        <Button Content="x&#x00B2;" Grid.Column="1" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding SquareCommand}"/>
+        <Button Content="√x" Grid.Column="2" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding RootCommand}"/>
+        <Button Content="/" Grid.Column="3" Grid.Row="4" Style="{StaticResource OtherButtonsStyle}" Command="{Binding DivCommand}"/>
 
         <!-- 3 строка -->
-        <Button Content="7" Grid.Column="0" Grid.Row="6" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddSevenCommand}"/>
-        <Button Content="8" Grid.Column="1" Grid.Row="6" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddEightCommand}"/>
-        <Button Content="9" Grid.Column="2" Grid.Row="6" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddNineCommand}"/>
-        <Button Content="*" Grid.Column="3" Grid.Row="6" Style="{StaticResource OtherButtonsStyle}" Command="{Binding MultCommand}"/>
+        <Button Content="7" Grid.Column="0" Grid.Row="5" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddSevenCommand}"/>
+        <Button Content="8" Grid.Column="1" Grid.Row="5" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddEightCommand}"/>
+        <Button Content="9" Grid.Column="2" Grid.Row="5" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddNineCommand}"/>
+        <Button Content="*" Grid.Column="3" Grid.Row="5" Style="{StaticResource OtherButtonsStyle}" Command="{Binding MultCommand}"/>
 
         <!-- 4 строка -->
-        <Button Content="4" Grid.Column="0" Grid.Row="7" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddFourCommand}"/>
-        <Button Content="5" Grid.Column="1" Grid.Row="7" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddFiveCommand}"/>
-        <Button Content="6" Grid.Column="2" Grid.Row="7" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddSixCommand}"/>
-        <Button Content="-" Grid.Column="3" Grid.Row="7" Style="{StaticResource OtherButtonsStyle}" Command="{Binding SubCommand}"/>
+        <Button Content="4" Grid.Column="0" Grid.Row="6" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddFourCommand}"/>
+        <Button Content="5" Grid.Column="1" Grid.Row="6" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddFiveCommand}"/>
+        <Button Content="6" Grid.Column="2" Grid.Row="6" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddSixCommand}"/>
+        <Button Content="-" Grid.Column="3" Grid.Row="6" Style="{StaticResource OtherButtonsStyle}" Command="{Binding SubCommand}"/>
 
         <!-- 5 строка -->
-        <Button Content="1" Grid.Column="0" Grid.Row="8" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddOneCommand}"/>
-        <Button Content="2" Grid.Column="1" Grid.Row="8" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddTwoCommand}"/>
-        <Button Content="3" Grid.Column="2" Grid.Row="8" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddThreeCommand}"/>
-        <Button Content="+" Grid.Column="3" Grid.Row="8" Style="{StaticResource OtherButtonsStyle}" Command="{Binding SumCommand}"/>
+        <Button Content="1" Grid.Column="0" Grid.Row="7" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddOneCommand}"/>
+        <Button Content="2" Grid.Column="1" Grid.Row="7" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddTwoCommand}"/>
+        <Button Content="3" Grid.Column="2" Grid.Row="7" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddThreeCommand}"/>
+        <Button Content="+" Grid.Column="3" Grid.Row="7" Style="{StaticResource OtherButtonsStyle}" Command="{Binding SumCommand}"/>
 
         <!-- 6 строка -->
-        <Button Content="+/-" Grid.Column="0" Grid.Row="9" Style="{StaticResource NumberButtonsStyle}"/>
-        <Button Content="0" Grid.Column="1" Grid.Row="9" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddZeroCommand}"/>
-        <Button Content="," Grid.Column="2" Grid.Row="9" Style="{StaticResource NumberButtonsStyle}"/>
-        <Button Content="=" Background="LightSkyBlue" FontSize="20" Grid.Column="3" Grid.Row="9" Style="{StaticResource ButtonsStyle}" Command="{Binding EqualSignCommand}"/>
-        
-
+        <Button Content="+/-" Grid.Column="0" Grid.Row="8" Style="{StaticResource NumberButtonsStyle}" Command="{Binding SignChangeCommand}"/>
+        <Button Content="0" Grid.Column="1" Grid.Row="8" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddZeroCommand}"/>
+        <Button Content="," Grid.Column="2" Grid.Row="8" Style="{StaticResource NumberButtonsStyle}" Command="{Binding AddDotCommand}"/>
+        <Button Content="=" Background="LightSkyBlue" FontSize="20" Grid.Column="3" Grid.Row="8" Style="{StaticResource ButtonsStyle}" Command="{Binding EqualSignCommand}"/>
     </Grid>
 </Page>
